fixed spacing

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -52,7 +52,7 @@
             @media (max-width: 767px) {
 				font-size: 1.75rem;
 				text-align: center;
-				margin-top: -0.5rem;
+				margin-top: 1.0rem;
 			}
         }
         .subText {
